Created page with "Icona barra strumenti"

--- a/wiki/it/Macro_ForceRecompute.html
+++ b/wiki/it/Macro_ForceRecompute.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_ForceRecompute.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Neuberechnung erzwingen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_ForceRecompute.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro ForceRecompute (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_ForceRecompute.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro ForceRecompute (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_ForceRecompute.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Wymuszaj ponowne obliczenia (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -89,11 +89,8 @@ Macro Force Recompute
 </p>
 </div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=Force_Recompute.png&amp;filetimestamp=20140929195915&amp;.html" class="mw-file-description"><img src="../File/Force_Recompute.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span>
+<p>Icona barra strumenti
+<span typeof="mw:File"><a href="../index.php?title=Force_Recompute.png&amp;filetimestamp=20140929195915&amp;.html" class="mw-file-description"><img src="../File/Force_Recompute.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span>
 </p><p><b>Macro Force_Recompute.py</b>
 </p>
 <pre># -*- coding: utf-8 -*-
@@ -107,30 +104,30 @@ FreeCAD.ActiveDocument.recompute()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121085204
+Cached time: 20260121085213
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.029 seconds
-Real time usage: 0.056 seconds
-Preprocessor visited node count: 100/1000000
+CPU time usage: 0.036 seconds
+Real time usage: 0.052 seconds
+Preprocessor visited node count: 99/1000000
 Post&#8208;expand include size: 2350/2097152 bytes
 Template argument size: 660/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1419/5000000 bytes
+Unstrip post&#8208;expand size: 1420/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.728      1 -total
- 44.25%    7.403      1 Template:Macro/it
- 19.41%    3.247      1 Template:MacroCode
- 17.97%    3.006      1 Template:Clear
- 15.31%    2.561      1 Template:Button
+100.00%   10.612      1 -total
+ 38.14%    4.047      1 Template:Macro/it
+ 21.29%    2.259      1 Template:MacroCode
+ 20.33%    2.157      1 Template:Clear
+ 16.69%    1.771      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40731-0!canonical and timestamp 20260121085204 and revision id 1741845. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40731-0!canonical and timestamp 20260121085213 and revision id 1741847. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
