--- a/wiki/ja/Installing_on_Windows.html
+++ b/wiki/ja/Installing_on_Windows.html
@@ -31,8 +31,10 @@
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Standard_Installation">Standard Installation</span></h2>
 </div>
+<div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The easiest way to install the latest stable version of FreeCAD is to use the installer, see the <a href="../Download.html" title="Download">Download</a> page.
 </p>
+</div>
 <div class="mw-translate-fuzzy">
 <p>&#12418;&#12375;64&#12499;&#12483;&#12488;&#29256;&#12420;&#19981;&#23433;&#23450;&#38283;&#30330;&#29256;&#12434;&#12480;&#12454;&#12531;&#12525;&#12540;&#12489;&#12375;&#12383;&#12369;&#12428;&#12400;<a href="../Download.html" title="Download">&#12480;&#12454;&#12531;&#12525;&#12540;&#12489;&#12506;&#12540;&#12472;</a>&#12434;&#35211;&#12390;&#12367;&#12384;&#12373;&#12356;&#12290;
 </p>
@@ -150,13 +152,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121001051
+Cached time: 20260121091300
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.198 seconds
-Preprocessor visited node count: 267/1000000
+CPU time usage: 0.086 seconds
+Real time usage: 0.236 seconds
+Preprocessor visited node count: 268/1000000
 Post&#8208;expand include size: 9338/2097152 bytes
 Template argument size: 3149/2097152 bytes
 Highest expansion depth: 5/100
@@ -166,17 +168,17 @@ Unstrip post&#8208;expand size: 5272/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.063      1 -total
- 27.05%    6.510      2 Template:Docnav/ja
- 24.27%    5.839      1 Template:Userdocnavi/ja
- 15.95%    3.837      6 Template:Code
- 12.71%    3.059      1 Template:TOCright
- 11.79%    2.838      1 Template:Navigation_menu_2
- 10.12%    2.434      3 Template:FileName
-  5.12%    1.232      1 Template:Incode
+100.00%   44.534      1 -total
+ 23.23%   10.343      1 Template:Userdocnavi/ja
+ 19.25%    8.573      3 Template:FileName
+ 17.47%    7.778      6 Template:Code
+ 13.13%    5.848      2 Template:Docnav/ja
+ 13.01%    5.793      1 Template:Navigation_menu_2
+  9.28%    4.135      1 Template:Incode
+  6.68%    2.974      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:120743-0!canonical and timestamp 20260121001050 and revision id 1741740. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:120743-0!canonical and timestamp 20260121091258 and revision id 1741848. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
