--- a/wiki/ru/Interface_Customization.html
+++ b/wiki/ru/Interface_Customization.html
@@ -262,12 +262,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120065043
+Cached time: 20260121091318
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.147 seconds
-Real time usage: 0.247 seconds
+CPU time usage: 0.144 seconds
+Real time usage: 0.233 seconds
 Preprocessor visited node count: 625/1000000
 Post&#8208;expand include size: 40663/2097152 bytes
 Template argument size: 12107/2097152 bytes
@@ -278,19 +278,19 @@ Unstrip post&#8208;expand size: 4165/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.815      1 -total
- 14.80%    6.632      1 Template:Std_Base_navi/ru
- 10.59%    4.745      1 Template:TOCright
-  9.27%    4.154     10 Template:Value
-  9.08%    4.069      4 Template:Caption
-  8.44%    3.783      7 Template:Top
-  7.73%    3.466      2 Template:Docnav/ru
-  7.35%    3.296      1 Template:Interface_navi/ru
-  6.09%    2.731      2 Template:MenuCommand
-  5.55%    2.486     22 Template:Button
+100.00%   45.753      1 -total
+ 16.89%    7.728      1 Template:Std_Base_navi/ru
+ 13.96%    6.385      7 Template:Top
+ 12.67%    5.796     10 Template:Value
+  9.30%    4.254      2 Template:Docnav/ru
+  8.51%    3.892      1 Template:Userdocnavi/ru
+  8.30%    3.796     11 Template:Incode
+  6.17%    2.823      1 Template:Interface_navi/ru
+  5.09%    2.330      3 Template:Navigation_menu_2
+  4.99%    2.283      4 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:983-0!canonical and timestamp 20260120065043 and revision id 1657370. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:983-0!canonical and timestamp 20260121091318 and revision id 1657370. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
