Updated page Basic Part Design Tutorial 019/cs

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -322,21 +322,21 @@
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_cen02.png&amp;filetimestamp=20221214230226&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_cen02.png" decoding="async" width="240" height="240" class="mw-file-element" data-file-width="330" data-file-height="330"></a><figcaption>Fig: CH2</figcaption></figure>
 <ol><li>Zobrazte <b>Sketch001</b> a skryjte <b>Sketch</b> a <b>Mirrored001</b>.</li>
 <li>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a> a vytvo&#345;te nov&yacute; n&aacute;&#269;rt p&#345;ipojen&yacute; k <b>Rovin&#283;_YZ</b>. N&aacute;&#269;rt bude pojmenov&aacute;n <b>Sketch004</b>.</li>
-<li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Vytvo&#345;it lomenou &#269;&aacute;ru</a> a nakreslete k&#345;ivku, jak je nazna&#269;eno body <b>P1</b>, <b>P2</b>, <b>P3</b> a<b>P4</b> na <b>Obr.: CH1</b>.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Vytvo&#345;it lomenou &#269;&aacute;ru</a> a nakreslete k&#345;ivku, jak je nazna&#269;eno body <b>P1</b>, <b>P2</b>, <b>P3</b> a <b>P4</b> na <b>Obr.: CH1</b>.</li>
 <li>Nezapome&#328;te uzav&#345;&iacute;t k&#345;ivku v&yacute;b&#283;rem prvn&iacute;ho bodu. T&iacute;m se vytvo&#345;&iacute; po&#382;adovan&aacute; <span typeof="mw:File"><a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">vazba toto&#382;nosti</a>.</li>
 <li>Ukon&#269;ete n&aacute;stroj.</li>
 <li>Zkontrolujte pou&#382;it&eacute; vazby:
 <ul><li>Odstra&#328;te nadbyte&#269;n&eacute; <span typeof="mw:File"><a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical"><img src="../File/Sketcher_ConstrainVertical.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>  <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">vertik&aacute;ln&iacute; vazby</a> aplikov&aacute;n&eacute; na linii definovanou <b>P1</b> a <b>P2</b>.</li>
-<li>Ujist&#283;te se, &#382;e <span typeof="mw:File"><a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal"><img src="../File/Sketcher_ConstrainHorizontal.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">horizont&aacute;ln&iacute; vazba</a> byla pou&#382;ita na linie definovan&eacute; pomoc&iacute; <b>P1</b> a<b>P4</b>, a<b>P2</b> a<b>P3</b>.</li>
+<li>Ujist&#283;te se, &#382;e <span typeof="mw:File"><a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal"><img src="../File/Sketcher_ConstrainHorizontal.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">horizont&aacute;ln&iacute; vazba</a> byla pou&#382;ita na linie definovan&eacute; pomoc&iacute; <b>P1</b> a <b>P4</b>, a <b>P2</b> a <b>P3</b>.</li>
 <li>Ujist&#283;te se, &#382;e je na objektu <b>P1</b> a ose <b>Y</b> a na objektu <b>P2</b> a ose <b>Y</b> pou&#382;ito <span typeof="mw:File"><a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">omezen&iacute; bodu na objektu</a>.</li></ul></li>
 <li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_External.html" title="Sketcher External"><img src="../File/Sketcher_External.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_External.html" title="Sketcher External">Extern&iacute; geometrii</a></li>
 <li>Vyberte linii definovanou <b>EGP1</b> a <b>EGP2</b> ve <b>Sketch001</b>, ozna&#269;eno fialovou barvou na <b>Obr.: CH2</b>.</li>
 <li>Ukon&#269;ete n&aacute;stroj.</li>
-<li>Pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">vazbu bodu na objektu</a> na <b>P3</b> a &sbquo;&lsquo;'extern&iacute; geometrii<b>, a opakujte to pro </b>P4<b>. T&iacute;m se linie definovan&aacute; </b>P3<b> a </b>P4<b> shoduje s lini&iacute; definovanou </b>EGP1<b> a </b>EGP2<b>.</b></li>
+<li>Pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">vazbu bodu na objektu</a> na <b>P3</b> a <b>extern&iacute; geometrii</b>, a opakujte to pro <b>P4</b>. T&iacute;m se linie definovan&aacute; <b>P3</b> a <b>P4</b> shoduje s lini&iacute; definovanou <b>EGP1</b> a <b>EGP2</b>.</li>
 <li>Vyberte linii <b>P3</b> a&#382; <b>P4</b>, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">vazbu vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te <b>D&eacute;lka = 17 mm</b>.</li>
 <li>Vyberte body <b>EGP2</b> a <b>P4</b>, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">vazbu vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te <b>D&eacute;lka = 7 mm</b>.</li>
 <li>V&yacute;sledkem bude pln&#283; zavazben&yacute; n&aacute;&#269;rt, jako je na <b>Obr.: CH2</b>.</li>
-<li>Klikn&#283;te na<span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span>.</li>
+<li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span>.</li>
 <li>Skryjte <b>Sketch001</b>.</li></ol>
 <p><b><big>Pocket001</big></b>
 </p>
@@ -413,12 +413,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120215400
+Cached time: 20260121111445
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.297 seconds
-Real time usage: 0.436 seconds
+CPU time usage: 0.279 seconds
+Real time usage: 0.394 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41781/2097152 bytes
 Template argument size: 11587/2097152 bytes
@@ -429,19 +429,19 @@ Unstrip post&#8208;expand size: 2042/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.620      1 -total
- 23.45%   12.573      1 Template:PartDesign_Tools_navi/cs
- 20.41%   10.944      1 Template:Sketcher_Tools_navi/cs
- 16.73%    8.970      1 Template:Userdocnavi/cs
- 15.78%    8.462      3 Template:Navigation_menu_2
-  6.40%    3.430      1 Template:TutorialInfo
-  5.80%    3.109     19 Template:Button
-  5.66%    3.034      8 Template:KEY
-  5.50%    2.949      7 Template:ComboBox
-  4.29%    2.302      3 Template:CheckBox
+100.00%   62.947      1 -total
+ 24.99%   15.728      1 Template:PartDesign_Tools_navi/cs
+ 19.93%   12.545      3 Template:Navigation_menu_2
+ 19.47%   12.255      1 Template:Sketcher_Tools_navi/cs
+ 11.48%    7.228      1 Template:Userdocnavi/cs
+  7.43%    4.676      8 Template:KEY
+  6.80%    4.282      1 Template:TutorialInfo
+  5.98%    3.761      3 Template:CheckBox
+  5.81%    3.658      7 Template:ComboBox
+  5.20%    3.270      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120215400 and revision id 1741738. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260121111444 and revision id 1741850. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
