--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -342,11 +342,11 @@
 </p>
 <ol><li>Vyberte <b>Sketch004</b>.</li>
 <li>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_Pocket.html" title="PartDesign Pocket"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Kapsa</a>:
-<ol><li>Vyberte <b>Typ</b> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Dva rozm&#283;ry  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>.</li>
-<li>P&#345;i&#345;a&#271;te <b>8.5 mm</b> do <b>D&eacute;lka</b> a <b>2. d&eacute;lka</b>.</li>
+<ol><li>V poli <b>Typ</b> vyberte <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Dv&#283; k&oacute;ty  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>.</li>
+<li>P&#345;i&#345;a&#271;te <b>8.5 mm</b> do pol&iacute; <b>D&eacute;lka</b> a <b>2. d&eacute;lka</b>.</li>
 <li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
-<li>SVyberte nov&#283; vytvo&#345;en&yacute; <b>Pocket001</b>.</li>
-<li>Na kart&#283; Data v <a href="../Property_editor.html" class="mw-redirect" title="Property editor">Editoru vlastnost&iacute;</a> zm&#283;&#328;te vlastnost &bdquo;Refine&ldquo; na &bdquo;True&ldquo;. Editor vlastnost&iacute; najdete na kart&#283; Model v <a href="../Combo_view.html" class="mw-redirect" title="Combo view">Combo View</a>.</li></ol>
+<li>Vyberte nov&#283; vytvo&#345;en&yacute; <b>Pocket001</b>.</li>
+<li>Na kart&#283; &Uacute;daje v <a href="../Property_editor.html" class="mw-redirect" title="Property editor">Editoru vlastnost&iacute;</a> zm&#283;&#328;te vlastnost &bdquo;Refine&ldquo; na &bdquo;True&ldquo;. Editor vlastnost&iacute; najdete na kart&#283; Model v <a href="../Combo_view.html" class="mw-redirect" title="Combo view">Rozbalovac&iacute;m seznamu</a>.</li></ol>
 <p><b><big>Pozn&aacute;mky</big></b>
 </p>
 <ol><li>Pro' <i>Pocket001'</i> jsme mohli alternativn&#283; pou&#382;&iacute;t <b>Typ</b> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Dimension  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>, za&scaron;krtn&#283;te <b>Symetricky k rovin&#283;</b> a zadejte hodnotu <b>17 mm</b> pro <b>D&eacute;lku</b>.</li>
@@ -413,15 +413,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121111445
+Cached time: 20260121112938
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.279 seconds
-Real time usage: 0.394 seconds
+CPU time usage: 0.265 seconds
+Real time usage: 0.697 seconds
 Preprocessor visited node count: 832/1000000
-Post&#8208;expand include size: 41781/2097152 bytes
-Template argument size: 11587/2097152 bytes
+Post&#8208;expand include size: 41775/2097152 bytes
+Template argument size: 11581/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -429,19 +429,19 @@ Unstrip post&#8208;expand size: 2042/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.947      1 -total
- 24.99%   15.728      1 Template:PartDesign_Tools_navi/cs
- 19.93%   12.545      3 Template:Navigation_menu_2
- 19.47%   12.255      1 Template:Sketcher_Tools_navi/cs
- 11.48%    7.228      1 Template:Userdocnavi/cs
-  7.43%    4.676      8 Template:KEY
-  6.80%    4.282      1 Template:TutorialInfo
-  5.98%    3.761      3 Template:CheckBox
-  5.81%    3.658      7 Template:ComboBox
-  5.20%    3.270      5 Template:Clear
+100.00%   88.248      1 -total
+ 19.43%   17.147      1 Template:PartDesign_Tools_navi/cs
+ 16.79%   14.818     19 Template:Button
+ 16.43%   14.495      1 Template:Sketcher_Tools_navi/cs
+ 12.52%   11.048      1 Template:Userdocnavi/cs
+ 11.08%    9.779      3 Template:Navigation_menu_2
+  6.37%    5.621      3 Template:CheckBox
+  5.79%    5.106      1 Template:TutorialInfo
+  4.58%    4.044      8 Template:KEY
+  4.34%    3.829      7 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260121111444 and revision id 1741850. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260121112937 and revision id 1741852. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
