--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -349,7 +349,7 @@
 <li>Na kart&#283; &Uacute;daje v <a href="../Property_editor.html" class="mw-redirect" title="Property editor">Editoru vlastnost&iacute;</a> zm&#283;&#328;te vlastnost &bdquo;Refine&ldquo; na &bdquo;True&ldquo;. Editor vlastnost&iacute; najdete na kart&#283; Model v <a href="../Combo_view.html" class="mw-redirect" title="Combo view">Rozbalovac&iacute;m seznamu</a>.</li></ol>
 <p><b><big>Pozn&aacute;mky</big></b>
 </p>
-<ol><li>Pro' <i>Pocket001'</i> jsme mohli alternativn&#283; pou&#382;&iacute;t <b>Typ</b> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Dimension  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>, za&scaron;krtn&#283;te <b>Symetricky k rovin&#283;</b> a zadejte hodnotu <b>17 mm</b> pro <b>D&eacute;lku</b>.</li>
+<ol><li>Pro' <i>Pocket001'</i> jsme mohli alternativn&#283; pou&#382;&iacute;t <b>Typ</b> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Rozm&#283;r  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>, za&scaron;krtnout <b>Symetrick&yacute; k rovin&#283;</b> a zadat hodnotu <b>17 mm</b> pro <b>D&eacute;lku</b>.</li>
 <li><b>Vylep&scaron;it</b> se pokus&iacute; odstranit &scaron;vy zanechan&eacute; p&#345;edchoz&iacute;mi operacemi. Doporu&#269;uje se vylep&scaron;ovat pouze fin&aacute;ln&iacute; t&#283;leso, proto&#382;e n&#283;kter&eacute; operace mohou selhat, pokud byl vylep&scaron;en p&#345;edchoz&iacute; prvek. Existuj&iacute; v&scaron;ak tak&eacute; p&#345;&iacute;pady, kdy funkce vylep&scaron;it m&#367;&#382;e zajistit &uacute;sp&#283;&scaron;nost operace. V p&#345;&iacute;pad&#283; probl&eacute;m&#367; proto zkontrolujte tuto vlastnost a prove&#271;te test. Bohu&#382;el zat&iacute;m neexistuje obecn&eacute; pravidlo, kter&yacute;m by se bylo mo&#382;n&eacute; &#345;&iacute;dit.</li></ol>
 <div style="clear:both"></div>
 <p><span id="Result"></span>
@@ -413,15 +413,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121112938
+Cached time: 20260121113302
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.265 seconds
-Real time usage: 0.697 seconds
+CPU time usage: 0.316 seconds
+Real time usage: 0.492 seconds
 Preprocessor visited node count: 832/1000000
-Post&#8208;expand include size: 41775/2097152 bytes
-Template argument size: 11581/2097152 bytes
+Post&#8208;expand include size: 41769/2097152 bytes
+Template argument size: 11575/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -429,19 +429,19 @@ Unstrip post&#8208;expand size: 2042/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   88.248      1 -total
- 19.43%   17.147      1 Template:PartDesign_Tools_navi/cs
- 16.79%   14.818     19 Template:Button
- 16.43%   14.495      1 Template:Sketcher_Tools_navi/cs
- 12.52%   11.048      1 Template:Userdocnavi/cs
- 11.08%    9.779      3 Template:Navigation_menu_2
-  6.37%    5.621      3 Template:CheckBox
-  5.79%    5.106      1 Template:TutorialInfo
-  4.58%    4.044      8 Template:KEY
-  4.34%    3.829      7 Template:ComboBox
+100.00%   89.523      1 -total
+ 19.21%   17.200      1 Template:PartDesign_Tools_navi/cs
+ 16.89%   15.116      1 Template:Sketcher_Tools_navi/cs
+ 16.53%   14.796     19 Template:Button
+ 13.42%   12.016      3 Template:Navigation_menu_2
+  9.76%    8.737      5 Template:Clear
+  8.61%    7.707      1 Template:Userdocnavi/cs
+  8.24%    7.376      3 Template:CheckBox
+  6.00%    5.375      7 Template:ComboBox
+  4.29%    3.837      1 Template:TutorialInfo
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260121112937 and revision id 1741852. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260121113301 and revision id 1741854. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
