--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -356,7 +356,7 @@
 </p>
 <h2><span id="V.C3.BDsledek"></span><span class="mw-headline" id="V&yacute;sledek">V&yacute;sledek</span></h2>
 <p>Model je hotov&yacute;. M&#283;l by vypadat jako na obr&aacute;zku n&iacute;&#382;e.
-</p><p>Nakonec vyberte <b>Sketch</b> ve <a href="../Tree_view.html" class="mw-redirect" title="Tree view">stromov&eacute;m zobrazen&iacute;</a> a na kart&#283; Data v <a href="../Property_editor.html" class="mw-redirect" title="Property editor">editoru vlastnost&iacute;</a> vyhledejte <b>Sketch &rarr; Constraints</b>. Rozbalte tento uzel a zm&#283;&#328;te omezen&iacute; &bdquo;d&eacute;lky&ldquo; a &bdquo;&scaron;&iacute;&#345;ky&ldquo;. Model by se m&#283;l parametricky zm&#283;nit.
+</p><p>Nakonec vyberte <b>Sketch</b> ve <a href="../Tree_view.html" class="mw-redirect" title="Tree view">stromov&eacute;m zobrazen&iacute;</a> a na kart&#283; &Uacute;daje v <a href="../Property_editor.html" class="mw-redirect" title="Property editor">editoru vlastnost&iacute;</a> vyhledejte <b>Sketch &rarr; Constraints</b>. Rozbalte tento uzel a zm&#283;&#328;te omezen&iacute; &bdquo;d&eacute;lky&ldquo; a &bdquo;&scaron;&iacute;&#345;ky&ldquo;. Model by se m&#283;l parametricky zm&#283;nit.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_final_solid.png&amp;filetimestamp=20221106160049&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_final_solid.png" decoding="async" width="350" height="300" class="mw-file-element" data-file-width="350" data-file-height="300"></a></span>
 </p><p><br>
 </p>
@@ -413,12 +413,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121113302
+Cached time: 20260121114144
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.316 seconds
-Real time usage: 0.492 seconds
+CPU time usage: 0.220 seconds
+Real time usage: 0.575 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41769/2097152 bytes
 Template argument size: 11575/2097152 bytes
@@ -429,19 +429,19 @@ Unstrip post&#8208;expand size: 2042/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   89.523      1 -total
- 19.21%   17.200      1 Template:PartDesign_Tools_navi/cs
- 16.89%   15.116      1 Template:Sketcher_Tools_navi/cs
- 16.53%   14.796     19 Template:Button
- 13.42%   12.016      3 Template:Navigation_menu_2
-  9.76%    8.737      5 Template:Clear
-  8.61%    7.707      1 Template:Userdocnavi/cs
-  8.24%    7.376      3 Template:CheckBox
-  6.00%    5.375      7 Template:ComboBox
-  4.29%    3.837      1 Template:TutorialInfo
+100.00%   62.947      1 -total
+ 32.81%   20.651      1 Template:TutorialInfo
+ 14.33%    9.019      1 Template:PartDesign_Tools_navi/cs
+ 10.37%    6.526      1 Template:Userdocnavi/cs
+  9.96%    6.270      1 Template:Sketcher_Tools_navi/cs
+  9.95%    6.261      3 Template:Navigation_menu_2
+  9.12%    5.743      3 Template:CheckBox
+  7.12%    4.485      5 Template:Clear
+  5.12%    3.221      7 Template:ComboBox
+  3.50%    2.202     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260121113301 and revision id 1741854. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260121114143 and revision id 1741856. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
