--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -15,13 +15,13 @@
 <th class="ctOdd">Topic
 </th></tr>
 <tr>
-<td class="ctEven">Modelov&aacute;n&iacute;
+<td class="ctEven">{{{Topic}}}
 </td></tr>
 <tr>
 <th class="ctOdd">Level
 </th></tr>
 <tr>
-<td class="ctEven">Za&#269;&aacute;te&#269;n&iacute;k
+<td class="ctEven">{{{Level}}}
 </td></tr>
 <tr>
 <th class="ctOdd">Time to complete
@@ -413,15 +413,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121114144
+Cached time: 20260121114227
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.220 seconds
-Real time usage: 0.575 seconds
-Preprocessor visited node count: 832/1000000
-Post&#8208;expand include size: 41769/2097152 bytes
-Template argument size: 11575/2097152 bytes
+CPU time usage: 0.263 seconds
+Real time usage: 0.343 seconds
+Preprocessor visited node count: 830/1000000
+Post&#8208;expand include size: 41765/2097152 bytes
+Template argument size: 11549/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -429,19 +429,19 @@ Unstrip post&#8208;expand size: 2042/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.947      1 -total
- 32.81%   20.651      1 Template:TutorialInfo
- 14.33%    9.019      1 Template:PartDesign_Tools_navi/cs
- 10.37%    6.526      1 Template:Userdocnavi/cs
-  9.96%    6.270      1 Template:Sketcher_Tools_navi/cs
-  9.95%    6.261      3 Template:Navigation_menu_2
-  9.12%    5.743      3 Template:CheckBox
-  7.12%    4.485      5 Template:Clear
-  5.12%    3.221      7 Template:ComboBox
-  3.50%    2.202     19 Template:Button
+100.00%   57.095      1 -total
+ 27.15%   15.501      1 Template:Sketcher_Tools_navi/cs
+ 17.21%    9.824      1 Template:PartDesign_Tools_navi/cs
+ 15.96%    9.112      3 Template:Navigation_menu_2
+ 10.54%    6.019      1 Template:Userdocnavi/cs
+  8.08%    4.615     19 Template:Button
+  6.95%    3.971      3 Template:CheckBox
+  6.25%    3.568      8 Template:KEY
+  6.11%    3.489      7 Template:ComboBox
+  5.38%    3.069      1 Template:TutorialInfo
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260121114143 and revision id 1741856. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260121114227 and revision id 1741858. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
