--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -15,13 +15,13 @@
 <th class="ctOdd">Topic
 </th></tr>
 <tr>
-<td class="ctEven">{{{Topic}}}
+<td class="ctEven">Modelov&aacute;n&iacute;
 </td></tr>
 <tr>
 <th class="ctOdd">Level
 </th></tr>
 <tr>
-<td class="ctEven">{{{Level}}}
+<td class="ctEven">Za&#269;&aacute;te&#269;n&iacute;k
 </td></tr>
 <tr>
 <th class="ctOdd">Time to complete
@@ -413,15 +413,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121114227
+Cached time: 20260121114341
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.263 seconds
-Real time usage: 0.343 seconds
-Preprocessor visited node count: 830/1000000
-Post&#8208;expand include size: 41765/2097152 bytes
-Template argument size: 11549/2097152 bytes
+CPU time usage: 0.235 seconds
+Real time usage: 0.349 seconds
+Preprocessor visited node count: 832/1000000
+Post&#8208;expand include size: 41769/2097152 bytes
+Template argument size: 11575/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -429,19 +429,19 @@ Unstrip post&#8208;expand size: 2042/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.095      1 -total
- 27.15%   15.501      1 Template:Sketcher_Tools_navi/cs
- 17.21%    9.824      1 Template:PartDesign_Tools_navi/cs
- 15.96%    9.112      3 Template:Navigation_menu_2
- 10.54%    6.019      1 Template:Userdocnavi/cs
-  8.08%    4.615     19 Template:Button
-  6.95%    3.971      3 Template:CheckBox
-  6.25%    3.568      8 Template:KEY
-  6.11%    3.489      7 Template:ComboBox
-  5.38%    3.069      1 Template:TutorialInfo
+100.00%   32.735      1 -total
+ 18.82%    6.162      3 Template:Navigation_menu_2
+ 17.39%    5.694      1 Template:PartDesign_Tools_navi/cs
+ 16.96%    5.553      1 Template:Userdocnavi/cs
+ 16.15%    5.287      1 Template:Sketcher_Tools_navi/cs
+  7.59%    2.484      3 Template:CheckBox
+  7.05%    2.308      1 Template:TutorialInfo
+  6.37%    2.086     19 Template:Button
+  6.18%    2.022      7 Template:ComboBox
+  5.09%    1.666      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260121114227 and revision id 1741858. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260121114341 and revision id 1741860. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
