--- a/wiki/it/Macro_ForceRecompute.html
+++ b/wiki/it/Macro_ForceRecompute.html
@@ -76,12 +76,8 @@ Macro Force Recompute
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>A volte, quando un utente apporta modifiche al modello, FreeCAD sembra non riconoscerle/integrarle. Inoltre, il pulsante blu <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Std_Refresh.svg&amp;filetimestamp=20240528092556&amp;.html" class="mw-file-description"><img src="../File/Std_Refresh.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Refresh.html" title="Std Refresh">Aggiorna/Ricalcola</a></span> rimane disattivato. Ecco perch&eacute; questa piccola macro &egrave; stata progettata per forzare un ricalcolo manuale del modello.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Da FreeCAD v0.17, l'azione di questa macro pu&ograve; essere ottenuta tramite GUI. Nella vista a albero del modello, fare clic destro sul progetto e scegliere "Marca da ricalcolare" dal menu contestuale. Dopo di che, premere il pulsante <a href="../it/Std_Refresh.html" title="Std Refresh/it">Ricalcola</a>.
-</p>
-</div>
-<p><span id="Usage"></span>
+</p><p><b>Nota:</b> A partire da <span style="font-size:small;color:green;">versione 0.17 e superiori</span>, l'effetto di questa macro pu&ograve; essere ottenuto tramite l'interfaccia grafica. Fare clic con il pulsante destro del mouse sul progetto nella <a href="../it/Tree_view.html" class="mw-redirect" title="Tree view/it">vista ad albero del modello</a> e selezionare <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Segna da ricalcolare</span> dal menu contestuale. Ci&ograve; render&agrave; nuovamente attiva l'icona Aggiorna/Ricalcola. Ora premere il pulsante <span typeof="mw:File"><a href="../index.php?title=Std_Refresh.svg&amp;filetimestamp=20240528092556&amp;.html" class="mw-file-description"><img src="../File/Std_Refresh.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Std_Refresh.html" title="Std Refresh/it">Aggiorna</a> per eseguire un ricalcolo.
+</p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -104,15 +100,15 @@ FreeCAD.ActiveDocument.recompute()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121085213
+Cached time: 20260121124135
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
+CPU time usage: 0.033 seconds
 Real time usage: 0.052 seconds
-Preprocessor visited node count: 99/1000000
-Post&#8208;expand include size: 2350/2097152 bytes
-Template argument size: 660/2097152 bytes
+Preprocessor visited node count: 114/1000000
+Post&#8208;expand include size: 2743/2097152 bytes
+Template argument size: 684/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -120,14 +116,16 @@ Unstrip post&#8208;expand size: 1420/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.612      1 -total
- 38.14%    4.047      1 Template:Macro/it
- 21.29%    2.259      1 Template:MacroCode
- 20.33%    2.157      1 Template:Clear
- 16.69%    1.771      1 Template:Button
+100.00%   11.441      1 -total
+ 28.84%    3.300      1 Template:Macro/it
+ 18.00%    2.060      1 Template:MacroCode
+ 14.54%    1.663      1 Template:Clear
+ 14.01%    1.603      1 Template:Button
+ 11.72%    1.341      1 Template:VersionPlus/it
+  9.23%    1.056      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40731-0!canonical and timestamp 20260121085213 and revision id 1741847. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40731-0!canonical and timestamp 20260121124134 and revision id 1741862. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
