--- a/wiki/it/Macro_ForceRecompute.html
+++ b/wiki/it/Macro_ForceRecompute.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_ForceRecompute.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Neuberechnung erzwingen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_ForceRecompute.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro ForceRecompute (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_ForceRecompute.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro ForceRecompute (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_ForceRecompute.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Wymuszaj ponowne obliczenia (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -80,10 +80,8 @@ Macro Force Recompute
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Run the macro when necessary.
+<p>Eseguire la macro quando necessario.
 </p>
-</div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>Icona barra strumenti
 <span typeof="mw:File"><a href="../index.php?title=Force_Recompute.png&amp;filetimestamp=20140929195915&amp;.html" class="mw-file-description"><img src="../File/Force_Recompute.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span>
@@ -100,32 +98,32 @@ FreeCAD.ActiveDocument.recompute()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121124135
+Cached time: 20260121124143
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.052 seconds
-Preprocessor visited node count: 114/1000000
+CPU time usage: 0.040 seconds
+Real time usage: 0.058 seconds
+Preprocessor visited node count: 113/1000000
 Post&#8208;expand include size: 2743/2097152 bytes
 Template argument size: 684/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1420/5000000 bytes
+Unstrip post&#8208;expand size: 1424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.441      1 -total
- 28.84%    3.300      1 Template:Macro/it
- 18.00%    2.060      1 Template:MacroCode
- 14.54%    1.663      1 Template:Clear
- 14.01%    1.603      1 Template:Button
- 11.72%    1.341      1 Template:VersionPlus/it
-  9.23%    1.056      1 Template:KEY
+100.00%   16.889      1 -total
+ 26.99%    4.558      1 Template:Macro/it
+ 17.84%    3.013      1 Template:VersionPlus/it
+ 15.43%    2.606      1 Template:MacroCode
+ 15.15%    2.559      1 Template:Button
+ 10.94%    1.847      1 Template:Clear
+  9.11%    1.538      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40731-0!canonical and timestamp 20260121124134 and revision id 1741862. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40731-0!canonical and timestamp 20260121124143 and revision id 1741864. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
