--- a/wiki/it/Macro_WorkFeatures.html
+++ b/wiki/it/Macro_WorkFeatures.html
@@ -107,9 +107,7 @@ WorkFeatures
 </ul>
 </center>
 <p><br>
-</p>
-<div class="mw-translate-fuzzy">
-<p><b>Scheda Origin</b>
+<b>Scheda Origin</b>
 </p>
 <table>
 <tbody><tr>
@@ -117,9 +115,8 @@ WorkFeatures
 </td>
 <td>
 <ul><li><b>Scheda Origin</b></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Origin</span>&nbsp;: Crea una origine: un punto con gli assi X,Y,Z e i piani XZ,XY,YZ. Tutti gli elementi sono automaticamente impostati nascosti.</li></ul>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Origin</span>&nbsp;: Crea all'origine: un punto, assi X, Y e Z e piani XY, XZ e YZ. Il punto, gli assi e i piani di origine vengono direttamente impostati come nascosti.</li></ul>
 </td></tr></tbody></table>
-</div>
 <p><b>Scheda Points</b>
 </p>
 <table>
@@ -440,13 +437,13 @@ Spessore &egrave; la larghezza del piano di taglio.
 
 <!-- 
 NewPP limit report
-Cached time: 20260120105702
+Cached time: 20260121153425
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.203 seconds
-Real time usage: 0.234 seconds
-Preprocessor visited node count: 727/1000000
+CPU time usage: 0.186 seconds
+Real time usage: 0.335 seconds
+Preprocessor visited node count: 726/1000000
 Post&#8208;expand include size: 25684/2097152 bytes
 Template argument size: 3110/2097152 bytes
 Highest expansion depth: 5/100
@@ -456,18 +453,18 @@ Unstrip post&#8208;expand size: 21874/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  125.654      1 -total
-  6.45%    8.101      1 Template:Userdocnavi/it
-  3.82%    4.797     54 Template:KEY
-  2.78%    3.489     11 Template:Clear
-  2.57%    3.226      1 Template:Navigation_menu_2
-  2.48%    3.119      1 Template:Button
-  2.46%    3.086      1 Template:Macro/it
-  2.34%    2.938      1 Template:MenuCommand
-  2.32%    2.909      1 Template:Caption
+100.00%  165.576      1 -total
+  7.16%   11.855      1 Template:Userdocnavi/it
+  6.98%   11.565      1 Template:Macro/it
+  2.71%    4.493      1 Template:Navigation_menu_2
+  2.61%    4.325      1 Template:MenuCommand
+  2.50%    4.132     11 Template:Clear
+  2.42%    4.001     54 Template:KEY
+  2.34%    3.872      1 Template:Button
+  1.14%    1.895      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53774-0!canonical and timestamp 20260120105702 and revision id 1741545. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53774-0!canonical and timestamp 20260121153425 and revision id 1741866. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
