Updated page Macro FCCircularText

--- a/wiki/Macro_FCCircularText.html
+++ b/wiki/Macro_FCCircularText.html
@@ -3,7 +3,7 @@
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (33% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CircularText (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (95% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Testo Circolare (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: FCCircularText (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -140,7 +140,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 <li>ComboView to choose the font</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Origin</span> return to origin system font path ex: "C:/Windows/Fonts/"
 <ul><li>Default ARIAL.TTF</li></ul></li></ul>
-<h4><span class="mw-headline" id="Available_Options">Available Options</span></h4>
+<h4><span class="mw-headline" id="Available_options">Available options</span></h4>
 <p>After the first use, you must modify the following parameters: 
 </p><p><b>User parameter:BaseApp/Preferences/Macros/FCMmacros/FCCircularText</b>
 </p><p><b>switchModeTextList</b>
@@ -916,35 +916,35 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121050823
+Cached time: 20260121155347
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.388 seconds
-Real time usage: 0.444 seconds
+CPU time usage: 0.350 seconds
+Real time usage: 0.385 seconds
 Preprocessor visited node count: 1762/1000000
 Post&#8208;expand include size: 39398/2097152 bytes
 Template argument size: 12093/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 65902/5000000 bytes
+Unstrip post&#8208;expand size: 65907/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  217.163      1 -total
-  3.78%    8.214      1 Template:Draft_Tools_navi
-  2.88%    6.264      2 Template:Navigation_menu_2
-  2.75%    5.965     10 Template:Code
-  1.67%    3.629      1 Template:Userdocnavi
-  1.42%    3.094      1 Template:Macro
-  1.40%    3.041     10 Template:CheckBox
-  1.35%    2.936      7 Template:RadioButton
-  1.19%    2.589     19 Template:Clear
-  1.06%    2.300      6 Template:SpinBox
+100.00%  176.401      1 -total
+  2.80%    4.931      1 Template:Draft_Tools_navi
+  2.15%    3.800      2 Template:Navigation_menu_2
+  2.05%    3.623     10 Template:Code
+  1.52%    2.686      7 Template:RadioButton
+  1.41%    2.486      1 Template:Macro
+  1.41%    2.484     10 Template:CheckBox
+  1.18%    2.087      1 Template:Userdocnavi
+  1.07%    1.890      6 Template:SpinBox
+  1.07%    1.886      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260121050825 and revision id 1741749. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260121155347 and revision id 1741867. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
