Updated page Macro FCCircularText

--- a/wiki/Macro_FCCircularText.html
+++ b/wiki/Macro_FCCircularText.html
@@ -198,7 +198,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 <li>setSystemFonts    = <code>false</code></li>
 <li>seTtextAlignement = 1</li></ol>
 <div style="clear:both"></div>
-<h3><span class="mw-headline" id="Second_Section">Second Section</span></h3>
+<h3><span class="mw-headline" id="Second_section">Second section</span></h3>
 <p>Configuring characters in FCCircularText
 </p>
 <figure class="mw-default-size mw-halign-center" typeof="mw:File"><a href="index.php?title=FCCircularText_08.png&amp;filetimestamp=20200601141642&amp;.html" class="mw-file-description"><img src="File/FCCircularText_08.png" decoding="async" width="497" height="266" class="mw-file-element" data-file-width="497" data-file-height="266"></a><figcaption></figcaption></figure>
@@ -916,12 +916,12 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121155347
+Cached time: 20260121155413
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.350 seconds
-Real time usage: 0.385 seconds
+CPU time usage: 0.383 seconds
+Real time usage: 0.454 seconds
 Preprocessor visited node count: 1762/1000000
 Post&#8208;expand include size: 39398/2097152 bytes
 Template argument size: 12093/2097152 bytes
@@ -932,19 +932,19 @@ Unstrip post&#8208;expand size: 65907/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  176.401      1 -total
-  2.80%    4.931      1 Template:Draft_Tools_navi
-  2.15%    3.800      2 Template:Navigation_menu_2
-  2.05%    3.623     10 Template:Code
-  1.52%    2.686      7 Template:RadioButton
-  1.41%    2.486      1 Template:Macro
-  1.41%    2.484     10 Template:CheckBox
-  1.18%    2.087      1 Template:Userdocnavi
-  1.07%    1.890      6 Template:SpinBox
-  1.07%    1.886      1 Template:Codeextralink
+100.00%  226.286      1 -total
+  3.98%    9.003     18 Template:FALSE
+  2.07%    4.692      1 Template:Draft_Tools_navi
+  1.82%    4.129     10 Template:Code
+  1.80%    4.069      2 Template:Navigation_menu_2
+  1.23%    2.787      1 Template:Macro
+  1.18%    2.677      7 Template:RadioButton
+  1.09%    2.474      6 Template:SpinBox
+  1.09%    2.458      1 Template:Userdocnavi
+  1.04%    2.344     14 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260121155347 and revision id 1741867. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260121155413 and revision id 1741868. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
