--- a/wiki/Macro_FCCircularText.html
+++ b/wiki/Macro_FCCircularText.html
@@ -916,12 +916,12 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121155645
+Cached time: 20260121155759
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.392 seconds
-Real time usage: 0.439 seconds
+CPU time usage: 0.313 seconds
+Real time usage: 0.393 seconds
 Preprocessor visited node count: 1762/1000000
 Post&#8208;expand include size: 39398/2097152 bytes
 Template argument size: 12093/2097152 bytes
@@ -932,19 +932,19 @@ Unstrip post&#8208;expand size: 65910/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  219.631      1 -total
-  3.96%    8.700      1 Template:Draft_Tools_navi
-  3.23%    7.099      2 Template:Navigation_menu_2
-  2.56%    5.632     10 Template:Code
-  1.74%    3.816      7 Template:RadioButton
-  1.55%    3.405      3 Template:ColoredText
-  1.27%    2.792      1 Template:Userdocnavi
-  1.23%    2.706      6 Template:SpinBox
-  1.12%    2.461     10 Template:CheckBox
-  1.10%    2.407      1 Template:Macro
+100.00%  170.313      1 -total
+  4.04%    6.875     10 Template:Code
+  3.85%    6.559      1 Template:Draft_Tools_navi
+  3.23%    5.494      2 Template:Navigation_menu_2
+  2.23%    3.798      1 Template:Userdocnavi
+  1.55%    2.640      6 Template:SpinBox
+  1.51%    2.570      1 Template:Macro
+  1.48%    2.527      7 Template:RadioButton
+  1.39%    2.368     10 Template:CheckBox
+  1.13%    1.925     22 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260121155646 and revision id 1741871. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260121155759 and revision id 1741871. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
