Reverted edit by [[Special:Contributions/C4e|C4e]] ([[User talk:C4e|talk]]) to last revision by [[User:Roy 043|Roy 043]]

--- a/wiki/Sketcher_Dimension.html
+++ b/wiki/Sketcher_Dimension.html
@@ -82,9 +82,8 @@
 <li>This tool always runs in continue mode: optionally keep creating constraints.</li></ol></li>
 <li>To finish, right-click or press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>, or start another geometry or constraint creation tool.</li></ul></li></ol>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
-<p><span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal dimensions</a> and <span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> have a distinct behavior compared to <span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistance.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">distance dimensions</a>. The first two dimension types also constrain the relative positions of the measured points so that they won't <a href="Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">switch places</a>. For example, for a horizontal dimension the left point will always remain the left point. 
-</p><p>This is not the case for distance dimensions. When using this tool to apply a dimensional constraint to points with the same X- or Y-coordinate you need to take care when picking the point to position it. You can verify which dimension type will be created by checking the last item in the <a href="Sketcher_Dialog.html#Constraints" title="Sketcher Dialog">Constraints section of the Sketcher Dialog</a>, this will dynamically update as you move the mouse.
-</p><p><br>
+<ul><li><span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal dimensions</a> and <span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> have a distinct behavior compared to <span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistance.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">distance dimensions</a>. The first two dimension types also constrain the relative positions of the measured points so that they won't <a href="Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">switch places</a>. For example, for a horizontal dimension the left point will always remain the left point. This is not the case for distance dimensions. When using this tool to apply a dimensional constraint to points with the same X- or Y-coordinate you need to take care when picking the point to position it. You can verify which dimension type will be created by checking the last item in the <a href="Sketcher_Dialog.html#Constraints" title="Sketcher Dialog">Constraints section of the Sketcher Dialog</a>, this will dynamically update as you move the mouse.</li></ul>
+<p><br>
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Sketcher_ToggleConstruction.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">Toggle Construction Geometry</a></div>
@@ -129,12 +128,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121053912
+Cached time: 20260121160411
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.140 seconds
-Real time usage: 0.169 seconds
+CPU time usage: 0.104 seconds
+Real time usage: 0.121 seconds
 Preprocessor visited node count: 424/1000000
 Post&#8208;expand include size: 24388/2097152 bytes
 Template argument size: 9595/2097152 bytes
@@ -145,19 +144,19 @@ Unstrip post&#8208;expand size: 1714/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.641      1 -total
- 29.18%    6.898      1 Template:Sketcher_Tools_navi
- 22.33%    5.279      2 Template:Navigation_menu_2
- 17.27%    4.083      1 Template:GuiCommand
- 14.75%    3.486      2 Template:Docnav
- 13.40%    3.169      1 Template:Userdocnavi
- 11.72%    2.770      2 Template:Value
-  5.63%    1.330      2 Template:Incode
-  5.32%    1.258      4 Template:KEY
-  4.58%    1.083      4 Template:MenuCommand
+100.00%   17.245      1 -total
+ 31.46%    5.425      1 Template:Sketcher_Tools_navi
+ 25.46%    4.391      2 Template:Navigation_menu_2
+ 15.94%    2.748      1 Template:GuiCommand
+ 13.32%    2.297      1 Template:Userdocnavi
+ 12.80%    2.208      2 Template:Value
+ 10.13%    1.747      2 Template:Docnav
+  6.87%    1.185      2 Template:Incode
+  5.61%    0.967      4 Template:KEY
+  5.56%    0.959      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331921-0!canonical and timestamp 20260121053918 and revision id 1741784. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331921-0!canonical and timestamp 20260121160411 and revision id 1741930. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
