Updated page Workbench creation/pl

--- a/wiki/pl/Workbench_creation.html
+++ b/wiki/pl/Workbench_creation.html
@@ -7,6 +7,7 @@
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt-br/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--med" title="Cria&ccedil;&atilde;o de bancadas de trabalho (23% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/ro (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
+<li><a href="../cs/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Vytvo&#345;en&iacute; pracovn&iacute; plochy (2% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1082;&#1072; &#1074;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1072; (85% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="&#24037;&#20316;&#21488;&#30340;&#21019;&#24314; (85% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../zh-hant/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/zh-hant (0% translated)" lang="zh-Hant" dir="ltr">&#20013;&#25991;&#65288;&#32321;&#39636;&#65289;</a></li>
@@ -399,7 +400,7 @@ Utworzono kolejny akapit w celu opisania nowego standardu. Zobacz [<a rel="nofol
 <h2><span id="Powi.C4.85zane"></span><span class="mw-headline" id="Powi&#261;zane">Powi&#261;zane</span></h2>
 <ul><li><a href="../pl/Translating_an_external_workbench.html" title="Translating an external workbench/pl">T&#322;umaczenie interfejsu zewn&#281;trznych &#347;rodowisk pracy</a></li>
 <li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=47460">Dyskusja na forum: Namespaced Workbenches</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/freecad.workbench_starterkit">freecad.workbench_starterkit</a></li></ul>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Addon-Template">Addon Template</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -429,35 +430,35 @@ Utworzono kolejny akapit w celu opisania nowego standardu. Zobacz [<a rel="nofol
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251221133502
+Cached time: 20260121162743
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.122 seconds
-Real time usage: 0.169 seconds
+CPU time usage: 0.106 seconds
+Real time usage: 0.139 seconds
 Preprocessor visited node count: 434/1000000
 Post&#8208;expand include size: 10760/2097152 bytes
 Template argument size: 13269/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 12/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 32661/5000000 bytes
+Unstrip post&#8208;expand size: 32833/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.640      1 -total
- 19.58%    5.609     12 Template:Code
- 15.88%    4.547      1 Template:Powerdocnavi/pl
- 10.65%    3.051      1 Template:VeryImportantMessage
- 10.27%    2.941      2 Template:Docnav/pl
-  6.68%    1.914      1 Template:VersionPlus/pl
-  6.21%    1.779     10 Template:Incode
-  6.17%    1.767      5 Template:FileName
-  6.05%    1.733      1 Template:VersionMinus/pl
-  5.47%    1.568      1 Template:Navigation_menu_2
+100.00%   21.303      1 -total
+ 21.69%    4.621     12 Template:Code
+ 17.99%    3.832      1 Template:Powerdocnavi/pl
+  9.20%    1.960      2 Template:Docnav/pl
+  7.77%    1.655      1 Template:Navigation_menu_2
+  6.94%    1.479      1 Template:MenuCommand
+  6.33%    1.349      1 Template:VeryImportantMessage
+  6.14%    1.307     10 Template:Incode
+  5.95%    1.267      1 Template:VersionMinus/pl
+  5.64%    1.202      1 Template:VersionPlus/pl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:200239-0!canonical and timestamp 20251221133502 and revision id 1719258. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:200239-0!canonical and timestamp 20260121162743 and revision id 1741954. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
