Updated page File Format FCStd/pl

--- a/wiki/pl/File_Format_FCStd.html
+++ b/wiki/pl/File_Format_FCStd.html
@@ -5,7 +5,7 @@
 <li><a href="../es/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="File Format FCStd (88% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Fichier au format FCStd (92% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Formato dei file FCStd (92% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="File Format FCStd (4% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Formato do arquivo FCStd (92% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="Formatul fi&#537;ierului FCStd (8% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -150,11 +150,8 @@
 </p>
 <h2><span id="Osadzanie_innych_plik.C3.B3w"></span><span class="mw-headline" id="Osadzanie_innych_plik&oacute;w">Osadzanie innych plik&oacute;w</span></h2>
 <p>Aby osadzi&#263; inne typy plik&oacute;w w pliku FCStd, musisz najpierw utworzy&#263; plik typu <a href="../pl/Scripted_objects.html" title="Scripted objects/pl">obiekt skryptowy</a> z <a href="../pl/Python_Console.html" title="Python Console/pl">Konsoli Pythona</a> i nadaj mu w&#322;a&#347;ciwo&#347;&#263; <code>App::PropertyFileIncluded</code>.
+</p><p>Nast&#281;pnie w <a href="../pl/Property_View.html" title="Property View/pl">Widoku w&#322;a&#347;ciwo&#347;ci</a> mo&#380;esz przej&#347;&#263; do dodanej w&#322;a&#347;ciwo&#347;ci i wybra&#263; plik na komputerze. Po zapisaniu pliku FCStd plik przypisany do w&#322;a&#347;ciwo&#347;ci <span style="font-size: 0.6em;padding-right:10px;">DANE</span><b>DataPropertyFileIncluded</b> zostanie umieszczony w pliku <code>.FCStd</code>. Gdy dokument zostanie przywr&oacute;cony, ten sam plik zostanie przywr&oacute;cony z w&#322;a&#347;ciwo&#347;ci&#261; <span style="font-size: 0.6em;padding-right:10px;">DANE</span><b>PropertyFileIncluded</b>.
 </p>
-<div class="mw-translate-fuzzy">
-<p>Nast&#281;pnie w <a href="../pl/Property_editor.html" class="mw-redirect" title="Property editor/pl">edytorze w&#322;a&#347;ciwo&#347;ci</a> mo&#380;esz przej&#347;&#263; do dodanej w&#322;a&#347;ciwo&#347;ci i wybra&#263; plik na komputerze. Po zapisaniu pliku FCStd plik przypisany do w&#322;a&#347;ciwo&#347;ci <span style="font-size: 0.6em;padding-right:10px;">DANE</span><b>DataPropertyFileIncluded</b> zostanie umieszczony w pliku <code>.FCStd</code>. Gdy dokument zostanie przywr&oacute;cony, ten sam plik zostanie przywr&oacute;cony z w&#322;a&#347;ciwo&#347;ci&#261; <span style="font-size: 0.6em;padding-right:10px;">DANE</span><b>PropertyFileIncluded</b>.
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">custom_obj</span> <span class="o">=</span> <span class="n">App</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"CustomObject"</span><span class="p">)</span>
 <span class="n">custom_obj</span><span class="o">.</span><span class="n">addProperty</span><span class="p">(</span><span class="s2">"App::PropertyFileIncluded"</span><span class="p">,</span> <span class="s2">"AttachedFile"</span><span class="p">)</span>
 </pre></div>
@@ -182,34 +179,34 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121180334
+Cached time: 20260121180344
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.167 seconds
-Preprocessor visited node count: 252/1000000
+CPU time usage: 0.082 seconds
+Real time usage: 0.341 seconds
+Preprocessor visited node count: 251/1000000
 Post&#8208;expand include size: 8023/2097152 bytes
 Template argument size: 5957/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 20660/5000000 bytes
+Unstrip post&#8208;expand size: 20664/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.453      1 -total
- 26.97%    9.561      1 Template:Userdocnavi/pl
- 14.17%    5.023      2 Template:PropertyData/pl
- 12.60%    4.467     16 Template:FileName
- 12.11%    4.294      1 Template:TOCright
- 10.50%    3.723      1 Template:Navigation_menu_2
- 10.42%    3.695      2 Template:Code
-  8.19%    2.903      1 Template:Clear
-  8.15%    2.888      2 Template:Incode
+100.00%   46.441      1 -total
+ 22.71%   10.545      2 Template:Code
+ 17.77%    8.254     16 Template:FileName
+ 17.74%    8.239      2 Template:PropertyData/pl
+ 13.44%    6.242      2 Template:Incode
+ 11.07%    5.141      1 Template:TOCright
+  9.04%    4.200      1 Template:Userdocnavi/pl
+  3.78%    1.754      1 Template:Navigation_menu_2
+  2.78%    1.289      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:58759-0!canonical and timestamp 20260121180334 and revision id 1741981. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:58759-0!canonical and timestamp 20260121180344 and revision id 1741983. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
